# Optimizer-Benchmark

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  runner.py
.github/workflows/: deploy.yml
benchmark/: criterion.py  evaluate.py  hypertune.py  visualizer.py
benchmark/functions/: __init__.py  ackley.py  beale.py  cross_in_tray.py  drop_wave.py  eggholder.py  goldstein_price.py  gradientlabyrinth.py  gramacy_lee2d.py  griewank.py  holder_table.py  langermann.py  langermann2.py  levy.py  levy13.py  mixed_michalewicz_sphere.py  neuralcanyon.py  norm.py  quantumwell.py  rastrigin.py  rosenbrock.py  schaffer2.py  schaffer4.py  schwefelsin.py  shubert.py  styblinski_tang.py  template.txt  weierstrass.py
benchmark/utils/: executor.py  model.py  surface.py
docs/: README.md  _config.yml  index.html  ranks.json  robots.txt  script.js  sitemap.txt  sitemap.xml  sitemap_index.xml  style.css  testmap.xml
docs-common/: README.md
docs-common/includes/: comparison.md
docs/_includes/: comparison.md  mathjax.html
docs/_layouts/: default.html
docs/functions/: gradient_labyrinth.md  neural_canyon.md  quantum_well.md
docs/vis/: accsgd.html  accsgd.md  adabelief.html  adabelief.md  adabound.html  adabound.md  adadelta.html  adadelta.md  adafactor.html  adafactor.md  adagc.html  adagc.md  adahessian.html  adahessian.md  adai.html  adai.md  adalite.html  adalite.md  adam.html  adam.md  adamax.html  adamax.md  adamc.html  adamg.html  adamg.md  adammini.html  adammini.md  adamod.html  adamod.md  adamp.html  adamp.md  adams.html  adams.md  adamw.md  adan.html  adan.md  adanorm.html  adanorm.md  adapnm.html  adapnm.md  (+166 more)
readme-base/: README.md
results/: results.json
tools/: core.py  doc_visualizations.py  gen_comparison.py  gen_sitemap.py  gen_visPages.py  md_comparison.py  md_visualizations.py  misc.py  sync_docs.py
tools/templates/: card.html  page.html  script.js  styles.css
