[project]
name = "Optimizer-Benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.2.1",
  "matplotlib>=3.10.5",
  "numpy>=2.3.2",
  "optuna>=4.4.0",
  "pillow>=11.3.0",
  "pytorch-optimizer>=3.8.0",
  "tabulate>=0.9.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
  # "plotly>=6.0.0",
  # "kaleido>=1.0.0",
]

[project.optional-dependencies]
# [dependency-groups]
# docs = [
#   "mkdocs-material>=9.6.16",
# ]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"

# reportArgumentType = "none"
# reportPossiblyUnboundVariable = "none"
# reportCallIssue = "none"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
